<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <ImageView
            android:id="@+id/pp_display_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/pasport_image_description" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/document_infos" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/document_number" />

            <TextView
                android:id="@+id/ppd_documentNumberW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/personal_number" />

            <TextView
                android:id="@+id/ppd_personalNumberW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/issuing_state" />

            <TextView
                android:id="@+id/ppd_issuingStateW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/date_of_expiry" />

            <TextView
                android:id="@+id/ppd_dateOfExpiryW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <View
            android:layout_height="4dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/personal_infos" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/primary_identifier" />

            <TextView
                android:id="@+id/ppd_primaryIdentifierW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/secondary_identifiers" />

            <TextView
                android:id="@+id/ppd_secondaryIdentifiersW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/ppd_genderW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/nationality" />

            <TextView
                android:id="@+id/ppd_nationalityW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/date_of_birth" />

            <TextView
                android:id="@+id/ppd_dateOfBirthW"
                android:gravity="end"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <View
            android:layout_height="4dip"
            android:background="#FF909090" />

        <Button
            android:id="@+id/ppd_savePicW"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/saveImageLabel" />

        <Button
            android:id="@+id/ppd_closeW"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/closeLabel" />
    </TableLayout>

</ScrollView>
