<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext_q1" />

        <TextView
            style="@style/Q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext_q2" />

        <TextView
            style="@style/A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext_a1" />

        <TextView
            style="@style/Q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext_q3" />

        <TextView
            style="@style/A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext_a2" />
    </LinearLayout>
</ScrollView>
