<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BAC" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/enter_document_number" />

            <EditText
                android:id="@+id/docNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/document_number_hint"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:lines="1"
                android:maxLines="1" />

            <Button
                android:id="@+id/selectDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_date_birth" />

            <Button
                android:id="@+id/selectDOE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_date_expiry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bacEditor_cancelW"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CANCEL" />

                <Button
                    android:id="@+id/bacEditor_okW"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/OK" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bacEditorInfo" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
