<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_BAC" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <ListView
            android:id="@+id/listW"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />
    </ScrollView>

    <Button
        android:id="@+id/readNewW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_new_passport" />

    <Button
        android:id="@+id/tryAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_all_passports" />
</LinearLayout>
